# AlgorthmesDExploration-Week4-Schmitt

./: .gitignore  CMakeLists.txt  README.md
src/: ChessBot.h  ChessCompetition.h  ChessMatch.h  Heuristic.h  HillClimbingBot.h  HumanPlayer.h  RandomBot.h  demo.cpp  main.cpp
